force-app/main/default/objects/SIGHTS_MOTION_DETECT_AREA__x/SIGHTS_MOTION_DETECT_AREA__x.object-meta.xml
<CustomObject>
    <description>SIGHTS_MOTION_DETECT_AREA</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>SIGHTS_MOTION_DETECT_AREA</externalName>
    <label>Sights動体検知領域情報</label>
</CustomObject>