force-app/main/default/objects/SIGHTS_MOTION_DETECT_AREA__x/fields/activation_flg__c.field-meta.xml
<CustomField>
    <fullName>activation_flg__c</fullName>
    <description>activation_flg</description>
    <externalDeveloperName>activation_flg</externalDeveloperName>
    <label>activation_flg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>