force-app/main/default/objects/SIGHTS_MOTION_DETECT_AREA__x/fields/area_id__c.field-meta.xml
<CustomField>
    <fullName>area_id__c</fullName>
    <description>area_id</description>
    <externalDeveloperName>area_id</externalDeveloperName>
    <label>area_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>