force-app/main/default/objects/SIGHTS_MOTION_DETECT_AREA__x/fields/area_name__c.field-meta.xml
<CustomField>
    <fullName>area_name__c</fullName>
    <description>area_name</description>
    <externalDeveloperName>area_name</externalDeveloperName>
    <label>area_name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>