force-app/main/default/objects/SIGHTS_MOTION_DETECT_AREA__x/fields/car_model__c.field-meta.xml
<CustomField>
    <fullName>car_model__c</fullName>
    <description>car_model</description>
    <externalDeveloperName>car_model</externalDeveloperName>
    <label>car_model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>