force-app/main/default/objects/SIGHTS_MOTION_DETECT_AREA__x/fields/end_time__c.field-meta.xml
<CustomField>
    <fullName>end_time__c</fullName>
    <description>end_time</description>
    <externalDeveloperName>end_time</externalDeveloperName>
    <label>end_time</label>
    <length>16</length>
    <type>Text</type>
</CustomField>