force-app/main/default/objects/SIGHTS_MOTION_DETECT_AREA__x/fields/human_model__c.field-meta.xml
<CustomField>
    <fullName>human_model__c</fullName>
    <description>human_model</description>
    <externalDeveloperName>human_model</externalDeveloperName>
    <label>human_model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>