force-app/main/default/objects/SIGHTS_MOTION_DETECT_AREA__x/fields/mode__c.field-meta.xml
<CustomField>
    <fullName>mode__c</fullName>
    <description>mode</description>
    <externalDeveloperName>mode</externalDeveloperName>
    <label>mode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>