force-app/main/default/objects/SIGHTS_MOTION_DETECT_AREA__x/fields/model_size__c.field-meta.xml
<CustomField>
    <fullName>model_size__c</fullName>
    <description>model_size</description>
    <externalDeveloperName>model_size</externalDeveloperName>
    <label>model_size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>