force-app/main/default/objects/SIGHTS_MOTION_DETECT_AREA__x/fields/sensitivity__c.field-meta.xml
<CustomField>
    <fullName>sensitivity__c</fullName>
    <description>sensitivity</description>
    <externalDeveloperName>sensitivity</externalDeveloperName>
    <label>sensitivity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>