force-app/main/default/objects/SIGHTS_MOTION_DETECT_AREA__x/fields/sights_motion_detect_area_id__c.field-meta.xml
<CustomField>
    <fullName>sights_motion_detect_area_id__c</fullName>
    <description>sights_motion_detect_area_id</description>
    <externalDeveloperName>sights_motion_detect_area_id</externalDeveloperName>
    <label>sights_motion_detect_area_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>