force-app/main/default/objects/SIGHTS_MOTION_DETECT_AREA__x/fields/start_time__c.field-meta.xml
<CustomField>
    <fullName>start_time__c</fullName>
    <description>start_time</description>
    <externalDeveloperName>start_time</externalDeveloperName>
    <label>start_time</label>
    <length>16</length>
    <type>Text</type>
</CustomField>